# search-over-tokens

./: .gitignore  README.md  pyproject.toml
docs/: ar_priors.md  eval.md  extension.md  search_algorithms.md  verifiers.md
flextok_ar/: LICENSE  README.md  __init__.py  flextok_ar_inference.ipynb  generate.py  generate_all.sh  pyproject.toml
flextok_ar/model/: __init__.py  attention.py  generation.py  integration.py  preprocessors.py  text_encoder.py
flextok_ar/utils/: __init__.py  helpers.py  mup_utils.py
notebooks/: 01_quickstart.ipynb  02_ar_free_search.ipynb  03_verifiers.ipynb  04_other_ar_models.ipynb
sot/: run_search.py
sot/configs/components/ar_priors/flextok/: flextok_ar_113m.yaml  flextok_ar_1b.yaml  flextok_ar_382m.yaml  flextok_ar_3b.yaml  flextok_ar_3b_uncond.yaml
sot/configs/components/ar_priors/gridtok/: gridtok_ar_3b.yaml
sot/configs/components/ar_priors/janus/: janus_pro.yaml
sot/configs/components/verifiers/: aesthetic.yaml  clip.yaml  cyclereward.yaml  dreamsim.yaml  ensemble.yaml  likelihood.yaml  pickscore.yaml  spatial.yaml
sot/configs/eval/: base.yaml
sot/configs/eval/flextok/: dpg_flextok_ar_3b_beam_ir.yaml  geneval_flextok_ar_3b_beam_ensemble.yaml  geneval_flextok_ar_3b_bon50_ensemble.yaml
sot/configs/eval/gridtok/: geneval_gridtok_ar_3b_beam_ir.yaml
sot/configs/eval/infinity/: geneval_infinity_beam_ir.yaml  geneval_infinity_la_ir.yaml
sot/configs/eval/janus/: dreambench_janus_pro_beam_ds.yaml  geneval_janus_beam_ir.yaml  geneval_janus_bon50_ir.yaml  geneval_janus_la_ir.yaml  geneval_janus_pro_la_ir.yaml
sot/data/: __init__.py  geneval.py
sot/sot/: __init__.py
sot/sot/ar_priors/: base.py  flextok_wrapper.py  infinity_wrapper.py  janus_wrapper.py  uniform.py
sot/sot/search_algorithms/: base.py  beam_search.py  best_of_n.py  lookahead_search.py
sot/sot/verifiers/: aesthetic_verifier.py  base.py  clip_verifier.py  cyclereward_verifier.py  dreamsim_verifier.py  ensemble_verifier.py  hpsv2_verifier.py  image_reward_verifier.py  likelihood_verifier.py  pickscore_verifier.py  spatial_verifier.py
sot/utils/: __init__.py  distributed.py  utils.py  viz.py
soto/: run_search.py
soto/ar_priors/: __init__.py  base.py  flextok_wrapper.py  infinity_wrapper.py  janus_wrapper.py  uniform.py
soto/configs/: default.yaml
soto/configs/components/ar_priors/: uniform.yaml
soto/configs/components/ar_priors/flextok/: flextok_ar_3b.yaml  flextok_ar_3b_uncond.yaml
soto/configs/components/ar_priors/gridtok/: gridtok_ar_3b.yaml
soto/configs/components/ar_priors/infinity/: infinity.yaml
soto/configs/components/ar_priors/janus/: janus.yaml
soto/configs/components/search_algorithms/: beam_search.yaml  best_of_n.yaml  lookahead_search.yaml
soto/configs/components/verifiers/: hpsv2.yaml  image_reward.yaml
soto/configs/eval/flextok/: coco_flextok_ar_3b_beam_ir.yaml  dreambench_flextok_ar_3b_beam_ds.yaml  geneval_flextok_ar_113m_beam_ir.yaml  geneval_flextok_ar_1b_beam_ir.yaml  geneval_flextok_ar_382m_beam_ir.yaml  geneval_flextok_ar_3b_beam_ir.yaml  geneval_flextok_ar_3b_beam_uncond_ir.yaml  geneval_flextok_ar_3b_beam_uniform_ir.yaml  geneval_flextok_ar_3b_bon50_ir.yaml  geneval_flextok_ar_3b_la8_ensemble.yaml  geneval_flextok_ar_3b_la8_ir.yaml
soto/configs/eval/infinity/: geneval_infinity_beam_ensemble.yaml  geneval_infinity_bon50_ir.yaml
soto/configs/eval/janus/: dreambench_janus_pro_bon50_ds.yaml  dreambench_janus_pro_la_ds.yaml  geneval_janus_beam_ensemble.yaml  geneval_janus_pro_beam_ensemble.yaml  geneval_janus_pro_beam_ir.yaml  geneval_janus_pro_bon50_ir.yaml
soto/data/: __init__.py  coco.py  dreambench.py
soto/search_algorithms/: base.py  beam_search.py  lookahead_search.py
soto/soto/: __init__.py
soto/soto/ar_priors/: flextok_wrapper.py  janus_wrapper.py  uniform.py
soto/soto/search_algorithms/: __init__.py  base.py  beam_search.py  best_of_n.py
soto/soto/verifiers/: aesthetic_verifier.py  base.py  clip_verifier.py  ensemble_verifier.py
soto/utils/: __init__.py  utils.py  viz.py
soto/verifiers/: __init__.py  base.py  cyclereward_verifier.py  dreamsim_verifier.py  hpsv2_verifier.py  image_reward_verifier.py  likelihood_verifier.py  pickscore_verifier.py  spatial_verifier.py
