[build-system]
requires = ["setuptools>=61", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "soto"
version = "0.1.0"
description = "(1D) Ordered Tokens Enable Efficient Test-Time Search"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = [
    # ── PyTorch ────────────────────────────────────────────────────────────
    "torch>=2.5.0,<2.11",
    "torchvision>=0.20.0,<0.26",

    # ── Core utilities ──────────────────────────────────────────────────────
    "numpy",
    "pillow",
    "hydra-core",
    "omegaconf",
    "setuptools",
    "safetensors",

    # ── HuggingFace ecosystem ──────────────────────────────────────────────
    # transformers<4.56: >=4.56 moved APIs that image-reward imports from modeling_utils
    "huggingface_hub>=0.21.0",
    "transformers>=4.38.0,<4.56",
    "diffusers>=0.25.0",
    "accelerate>=0.16.0",
    "datasets>=2.11.0",
    "sentencepiece>=0.1.99",

    # ── Shared model utilities ─────────────────────────────────────────────
    # Kept in the default stack because ImageReward is installed with --no-deps.
    "timm>=0.9.9",
    "einops>=0.7.0",
    "fairscale==0.4.13",
    "fvcore>=0.1.5",

    # ── Default verifier dependencies ─────────────────────────────────────
    "clip @ git+https://github.com/openai/CLIP.git",
    "imscore",
    "dreamsim",
    "gdown",

    # ── Default AR backbones ───────────────────────────────────────────────
    "flextok @ git+https://github.com/apple/ml-flextok.git",
    "l3m @ git+https://github.com/apple/ml-l3m.git",
]

[project.optional-dependencies]
spatial = [
    "open_clip_torch",
    "clip_benchmark",
    "opencv-python",
]
janus = [
    "janus @ git+https://github.com/deepseek-ai/Janus.git",
]
infinity = [
    "kornia",
    "imageio",
]
all = [
    "open_clip_torch",
    "clip_benchmark",
    "opencv-python",
    "janus @ git+https://github.com/deepseek-ai/Janus.git",
    "kornia",
    "imageio",
]
demo = [
    "gradio>=4.0.0",
    "spaces",
    "matplotlib>=3.7.0",
]

[project.urls]
"Homepage" = "https://soto.epfl.ch"

[tool.setuptools.packages.find]
where = ["."]
include = ["soto*", "flextok_ar*"]

[tool.setuptools]
py-modules = []

[project.scripts]
flextok-ar-generate = "flextok_ar.generate:main"
